--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ lerna-debug.log*
 /coverage
 /.nyc_output
 
+pgdata
+docker-compose.yml
+docker-compose1.yml
+
 # IDEs and editors
 /.idea
 .project
